# human-ai-orchestrator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT_MANAGER_INTEGRATION.md  Dockerfile  Dockerfile.gpu  LEGACY_CLEANUP_ANALYSIS.md  Makefile  PROJECT_OVERVIEW.md  PROMPT_FORMATTING_FIX.md  README-gradio.md  README.md  SETUP.md  SIMULATION_TEST_RUNNER_SUMMARY.md  check_db.py  debug_quality_agent.py  demo_complete_hitl_system.py  docker-compose.gpu.yml  git_help.md  gradio_demo.py  main.py  notebook_setup.txt  pyproject.main.toml.old  pyproject.toml  pyproject.toml.streamlit  requirements-gradio.txt  requirements.txt  setup_help.md  simulations.txt  streamlit_demo.py  test_context_display.py  test_gradio_basic.py  test_integration.py  test_progressive_demo.py
.claude/: settings.local.json
.devcontainer/: devcontainer.gpu.json  devcontainer.json
VIA_tech_demo/: .gitignore  README_DATABASE_SETUP.md  app.py
VIA_tech_demo/scripts/: add_knowledge_base.py  test_context_retrieval.py
config/: config.json  config.yaml  context.json  llm.yaml  local_llm_config.yaml  logging.yaml  models.yaml  prompts.json
config/environments/: development.yaml  production.yaml  testing.yaml
config/shared/: models.yaml  providers.yaml  system.yaml
configs/: app_config.yaml  app_logging_config.yaml
data/: human_agents.db  hybrid_system.db
docs/: AI_CONTEXT.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  GPU_SETUP.md  HITL_SYSTEM_GUIDE.md  README.md  human_routing_agent_design.md  human_routing_configuration_examples.md  human_routing_database_migration_plan.md  human_routing_implementation_checklist.md  new_proposal.txt  project_proposal.txt
front_end/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
front_end/src/: App.tsx  main.tsx  styles.css  types.ts
notebooks/: AI_Agents_Tutorial.ipynb  agent_tester.ipynb  chatbot_tester.ipynb  project_playground.ipynb
notebooks/agent_testers/: README.md  chatbot_tester.ipynb  frustration_agent_tester.ipynb  live_chat_tester.ipynb  quality_agent_tester.ipynb  question_generator.ipynb
notebooks/experiment_runs/: answer_agent_output_20250718_1258.json  answer_agent_settings_20250718_1258.json  chatbot_agent_output_20250719_2054.json  chatbot_agent_output_20250720_1250.json  chatbot_agent_settings_20250719_2054.json  chatbot_agent_settings_20250720_1250.yaml
notebooks/test_questions/: questions_only_20250718_1744.json
scripts/: add_demo_scenarios.py  agent_tuner.py  answer_agent_demo.py  compare_simulation_modes.py  configuration_tutorial.py  demo.py  experimentation_demo.py  gpu_detect.py  populate_context_database.py  run_simulation_tests.py  setup.py  setup_local_llm.py  test_llm_simulation.py  test_trace_collection.py
simulation_results/quick/: simulation_results_quick_validation_20250803_203025.json  simulation_results_quick_validation_20250803_203204.json  simulation_results_quick_validation_20250803_210641.json  simulation_results_quick_validation_20250803_210910.json  simulation_results_quick_validation_20250803_210928.json  simulation_results_quick_validation_20250803_214841.json  summary_quick_validation_20250803_203025.txt  summary_quick_validation_20250803_203204.txt  summary_quick_validation_20250803_210641.txt  summary_quick_validation_20250803_210910.txt  summary_quick_validation_20250803_210928.txt  summary_quick_validation_20250803_214841.txt
simulation_results/stress/: simulation_results_stress_test_20250803_155558.json  summary_stress_test_20250803_155558.txt
simulation_results/tuning/: simulation_results_agent_tuning_20250803_211649.json  simulation_results_agent_tuning_20250803_215535.json  summary_agent_tuning_20250803_211649.txt  summary_agent_tuning_20250803_215535.txt
src/: __init__.py
src/base_interfaces/: __init__.py
src/common/: common_di_container.py
src/core/: __init__.py  agent_field_mapper.py  (+8 more)
tests/: README.md  __init__.py  conftest.py  test_config_system_subset.py  test_framework_validation.py  test_simple_config_validation.py
(+361 files in other folders)
