[project]
name = "team_eric_hitl"
version = "0.1.0"
description = "Team Eric HITL - Data processing and analysis framework with modular architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Team Eric HITL", email = "christopherpmunch@gmail.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "dependency-injector>=4.41.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.0",
    "langchain-openai>=0.3.27",
    "langchain-anthropic>=0.3.16",
    "langchain-ollama>=0.3.3",
    "langchain-huggingface>=0.3.0",
    "transformers>=4.53.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
